--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+<body bgcolor = "00FFDA"> 
+<center>
+<h1>My name is Miriam Garza, welcome to my site!</h1>
+<img src= "Miriam.jpg" width= "220" height= "280">
+<h2><strong><br/>About Me</strong></h2>
+<p>I am a freshman at The University of Texas at Austin. <br/>I am from Brownsville, Texas however, I currently live in Edinburg, Texas. <br/> I am really hoping to major in Finance and build my own pastry business with the knowledge I gain at McCombs.</p>
+<h2><strong><br/>My Favorite Website:</strong></h2>
+<p><a href="https://us.shein.com/">Click here</a> to go to my favorite website!</p>
+</center></body>
+
 </html>
 
