--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
-<body bgcolor = "00FFDA"> 
+<body bgcolor = "C70039"> 
 <center>
 <h1>My name is Miriam Garza, welcome to my site!</h1>
-<img src= "Miriam.jpg" width= "220" height= "280">
+<img src= "Miriam.jpg" width= "240" height= "280">
 <h2><strong><br/>About Me</strong></h2>
 <p>I am a freshman at The University of Texas at Austin. <br/>I am from Brownsville, Texas however, I currently live in Edinburg, Texas. <br/> I am really hoping to major in Finance and build my own pastry business with the knowledge I gain at McCombs.</p>
 <h2><strong><br/>My Favorite Website:</strong></h2>
-<p><a href="https://us.shein.com/">Click here</a> to go to my favorite website!</p>
+<p><a href="https://us.shein.com/">Click here</a><strong> to go to my favorite website!</strong</p>
 </center></body>
 
 </html>
