--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body bgcolor = "C70039"> 
+<body bgcolor = "A4FF01"> 
 <center>
 <h1>My name is Miriam Garza, welcome to my site!</h1>
 <img src= "Miriam.jpg" width= "240" height= "280">
